--- a/hw3/流程圖、學習歷程.md
+++ b/hw3/流程圖、學習歷程.md
@@ -16,8 +16,7 @@
 > https://www.cnblogs.com/anzhengyu/p/11083568.html
 > https://blog.csdn.net/w17688977481/article/details/88581622
 > https://www.laurentluce.com/posts/binary-search-tree-library-in-python/
-後
-根據Linked list
+>後,根據Linked list
 （https://blog.csdn.net/liaoshenglan/article/details/100594507）![](https://i.imgur.com/caFvoTt.jpg)
 ![](https://i.imgur.com/6HHYexJ.jpg)
 ![](https://i.imgur.com/1RSW61X.jpg)
@@ -81,10 +80,10 @@ class TreeNode(object):
 ```
 不知道是否可以達到助教要求的測試格式一樣的效果
 ## :three:參考網址 :school: 
-:one:https://blog.csdn.net/weixin_41503009/article/details/82356000
-:two:https://blog.csdn.net/wzngzaixiaomantou/article/details/81294915
-:three:https://blog.csdn.net/qq_29681777/article/details/83903003
-:four:https://www.cnblogs.com/anzhengyu/p/11083568.html
-:five:https://blog.csdn.net/w17688977481/article/details/88581622
-:six:https://www.laurentluce.com/posts/binary-search-tree-library-in-python/
-:seven:https://blog.csdn.net/liaoshenglan/article/details/100594507
+>:one:https://blog.csdn.net/weixin_41503009/article/details/82356000
+>:two:https://blog.csdn.net/wzngzaixiaomantou/article/details/81294915
+>:three:https://blog.csdn.net/qq_29681777/article/details/83903003
+>:four:https://www.cnblogs.com/anzhengyu/p/11083568.html
+>:five:https://blog.csdn.net/w17688977481/article/details/88581622
+>:six:https://www.laurentluce.com/posts/binary-search-tree-library-in-python/
+>:seven:https://blog.csdn.net/liaoshenglan/article/details/100594507
